--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -4,3 +4,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
+.allerta-regular {
+  font-family: "Allerta", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
