--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -1,6 +1,8 @@
 ---
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
+import Button from "./Button.astro"
+import Gradientcard from "./Gradientcard.astro"
 ---
 <html lang="en">
 	<head>
@@ -12,6 +14,8 @@ import Footer from "../components/Footer.astro"
 	</head>
 
     <Header/>
+<Button/>
+<Gradientcard/>
 
 <Footer/>
 
