--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,16 +48,15 @@ opacity: 0.8;
   .countdown {
   font-size: 18px;
   font-weight: bold;
-  text-shadow: 4px 2px 4px rgb(255, 6, 164);
+  text-shadow: 4px 2px 4px #F72862;
   color: #fff;
 }
 
 p{
     font-size: 18px;
   font-weight: bold;
-  text-shadow: 4px 2px 4px rgb(255, 6, 164);
+  text-shadow: 4px 2px 4px #F72862;
 }
-
 
 </style>
 
