--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import Button from "./Button.astro"
 import Gradientcard from "./Gradientcard.astro"
+import Timetable from "./Timetable.astro"
 ---
 <html lang="en">
 	<head>
@@ -16,6 +17,7 @@ import Gradientcard from "./Gradientcard.astro"
     <Header/>
 <Button/>
 <Gradientcard/>
+<Timetable/>
 
 <Footer/>
 
