--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
-import MainLayout from "../components/MainLayout.astro"
-
+import MainLayout from "../components/MainLayout.astro";
 ---
 
-
 <MainLayout>
-
-<h1></h1>
+  <h1></h1>
 </MainLayout>
 
-
 <style>
-	html{background-color: rgb(16, 19, 46);}
+  html {
+    background-color: rgb(16, 19, 46);
+  }
 </style>
-
