--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,45 +1,44 @@
 ---
 
 ---
+
 <div class="btn-container">
-    <button>
-        <slot> LINEUP</slot>
-    </button>
-    </div>
+  <button>
+    <slot> LINEUP</slot>
+  </button>
+</div>
 
-    <style>
-        button {
-          display: inline-block;
-          margin: 20px;
-          padding: 12px 35px;
-          border: 2px solid #F72862;
-          border-radius: 15px;
-          color: white;
-          text-shadow: 2px 4px 7px #F72862;
-          font-family: "Allerta Stencil", sans-serif;
-          font-size: 16px;
-          text-decoration: none;
-          transition: 0.3s;
-          position: relative;
-          box-shadow: 0 0 15px #F72862;
-          background-color: transparent;
-          cursor: pointer;
-        }
-      
-        .btn-container {
-          display: flex;
-          justify-content: center;
-          margin-top: 20px;
-        }
-      
-    
-        button:hover {
-          background-color: #F72862; 
-          box-shadow: 0 0 15px #F72862; 
-        }
-        button:focus{
-            background-color: #F0D8DF;
-            text-shadow: none;
-        }
-      </style>
+<style>
+  button {
+    display: inline-block;
+    margin: 20px;
+    padding: 12px 35px;
+    border: 2px solid #f72862;
+    border-radius: 15px;
+    color: white;
+    text-shadow: 2px 4px 7px #f72862;
+    font-family: "Allerta Stencil", sans-serif;
+    font-size: 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    position: relative;
+    box-shadow: 0 0 15px #f72862;
+    background-color: transparent;
+    cursor: pointer;
+  }
 
+  .btn-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  button:hover {
+    background-color: #f72862;
+    box-shadow: 0 0 15px #f72862;
+  }
+  button:focus {
+    background-color: #f0d8df;
+    text-shadow: none;
+  }
+</style>
