--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,22 +8,21 @@ import "../pages/global.css";
       <img src="/img/instagram.png" alt="instagram" />
       <img src="/img/facebook.png" alt="facebook" />
     </div>
-    <img src="/img/heineken.png" alt="heineken" />
+    <img src="/img/heiniken_silver.png" alt="heineken" />
   </div>
 </footer>
 
 <style>
   img {
-    /* max-width: 100%; */
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 30px;
   }
+
   .icons {
-    display: flex; /* Placer ikonerne i en række */
-    justify-content: space-between; /* Placer elementerne på hver sin side */
-    align-items: center; /* Centerer elementerne vertikalt */
-    padding: 10px 20px; /* Indre margin */
-    border-top: 1px solid #ccc; /* Overkant border */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
   }
 
   .some {
