--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import "../pages/global.css";
 
 <header>
   <p>28/8-30/8 2025</p>
-  <img src="#" alt="logo" />
+  <img src="/img/karrusel.png" alt="logo" />
 
   <div class="countdown">
     <span class="days">254</span><span class="label"> DAGE</span> |
@@ -36,5 +36,10 @@ import "../pages/global.css";
     font-size: 18px;
     font-weight: bold;
     text-shadow: 4px 2px 4px #f72862;
+  }
+
+  img {
+    width: 65px;
+    height: auto;
   }
 </style>
