--- a/src/components/Gradientcard.astro
+++ b/src/components/Gradientcard.astro
@@ -20,8 +20,8 @@ const price = Astro.props.price;
     background: linear-gradient(180deg, #0f1843, #643b81);
     border-radius: 10px;
     padding: 20px;
-    /* margin: 10px; */
-    width: 200px;
+    margin: 5% 0;
+    width: 30%;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     color: white;
     font-family: "Allerta Stencil", sans-serif;
@@ -40,6 +40,7 @@ const price = Astro.props.price;
   @media (max-width: 800px) {
     article {
       place-self: center center;
+      width: 80%;
     }
   }
 </style>
