--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -15,8 +15,6 @@ import Gradientcard from "./Gradientcard.astro";
   </head>
 
   <Header />
-  <Button />
-  <Gradientcard />
-
+  <slot />
   <Footer />
 </html>
