--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,14 @@ import MainLayout from "../components/MainLayout.astro";
 ---
 
 <MainLayout>
-  <h1></h1>
+  <h1>hej med dig</h1>
 </MainLayout>
-
 <style>
   html {
     background-color: rgb(16, 19, 46);
+  }
+
+  body {
+    background-image: url("/img/rave5.webp");
   }
 </style>
