--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Button from "./Button.astro";
 import Gradientcard from "./Gradientcard.astro";
+import "../pages/global.css";
 ---
 
 <html lang="en">
@@ -11,6 +12,7 @@ import Gradientcard from "./Gradientcard.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+
     <title>Astro</title>
   </head>
 
