--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -11,3 +11,20 @@
   font-weight: 400;
   font-style: normal;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+body {
+  background-image: linear-gradient(to bottom, #0c141e, #280a4d);
+  color: white;
+}
