--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,7 @@ import "../pages/global.css";
     padding: 10px 20px;
     font-family: "Allerta", sans-serif;
     height: 60px;
+    background-color: rgba(0, 0, 0, 0.44);
   }
 
   .countdown {
