--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,9 +23,11 @@ import "../pages/global.css";
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.516);
   }
 
   .some {
-    margin: 10px;
+    display: flex;
+    align-items: center;
   }
 </style>
