--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import "../pages/global.css";
 
 <header>
   <p>28/8-30/8 2025</p>
-  <img src="/img/karrusel.png" alt="logo" />
+  <a href="../pages"> <img src="/img/karrusel.png" alt="logo" /></a>
 
   <div class="countdown">
     <span class="days">254</span><span class="label"> DAGE</span> |
