--- a/src/components/Timetable.astro
+++ b/src/components/Timetable.astro
@@ -19,7 +19,7 @@ const { artist, time, text } = Astro.props;
     box-shadow: 2px 7px 15px #f72862;
     color: #f72862;
     text-align: center;
-    font-family: Allerta Stencil;
+    font-family: "Allerta Stencil", sans-serif;
   }
 
   .time {
