--- a/src/pages/artists/index.astro
+++ b/src/pages/artists/index.astro
@@ -8,8 +8,8 @@ import Arrowright from "../../components/Arrowright.astro";
 const url = "https://qzvghkmmouqxsfoknccp.supabase.co/rest/v1/karrusel";
 const options = {
   headers: {
-    apikey: 
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF6dmdoa21tb3VxeHNmb2tuY2NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjg2Mzc5NjEsImV4cCI6MjA0NDIxMzk2MX0.sy6a8KiedZkQm-LbWQcxGe3QCll35uevBl3UVPUPLfk",
+    apikey:
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF6dmdoa21tb3VxeHNmb2tuY2NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjg2Mzc5NjEsImV4cCI6MjA0NDIxMzk2MX0.sy6a8KiedZkQm-LbWQcxGe3QCll35uevBl3UVPUPLfk",
   },
 };
 
@@ -55,7 +55,10 @@ const artists = await fetch(url, options).then((res) => res.json());
   <h2>DISCOVER THE ARTISTS</h2>
   <div class="imagecontainer">
     <img src="/img/anetha.webp" alt="anetha" />
-    <div class="billedetext"><h2>ANETHA</h2></div>
+    <!-- <div class="billedetext"><h2>ANETHA</h2></div> -->
+    <img src="/img/marlon.webp" alt="nene" />
+    <img src="/img/nene.webp" alt="anetha" />
+    <img src="/img/ki_ki.webp" alt="kiki" />
   </div>
   <div class="arrows">
     <Arrowleft />
@@ -80,14 +83,16 @@ const artists = await fetch(url, options).then((res) => res.json());
   }
 
   .imagecontainer {
-    position: relative;
-    display: inline-block;
+    /* position: relative;
+    display: inline-block; */
+    display: flex;
+    overflow-x: auto;
   }
   .imagecontainer img {
     display: block;
-    width: 100%;
+    width: 40%;
     height: auto;
-    box-shadow: 1px 1px 10px #f72862;
+    padding: 1%;
   }
 
   .billedetext {
@@ -101,7 +106,8 @@ const artists = await fetch(url, options).then((res) => res.json());
   }
 
   img {
-    border-radius: 20px;
+    border-radius: 40px;
+    /* box-shadow: 1px 1px 10px #f72862; */
   }
 
   @media (max-width: 800px) {
