--- a/src/components/Timetable.astro
+++ b/src/components/Timetable.astro
@@ -13,13 +13,19 @@ const { artist, time, text } = Astro.props;
   article {
     background-color: white;
     border-radius: 15px;
-    padding: 15px;
-    margin: 10px;
-    width: 140px;
+    padding: 20px;
+    margin: 15px;
+    width: 100%;
     box-shadow: 2px 7px 15px #f72862;
     color: #f72862;
     text-align: center;
     font-family: "Allerta Stencil", sans-serif;
+  }
+
+  a {
+    font-family: "Allerta Stencil", sans-serif;
+    text-decoration: none;
+    color: #f72862;
   }
 
   .time {
