tilføjet burgermenu og rodet med z-index, samt erstattet header billede.

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -26,6 +26,7 @@ const text = Astro.props.text;
     box-shadow: 0 0 15px #f72862;
     background-color: transparent;
     cursor: pointer;
+    z-index: 0;
   }
 
   .btn-container {
