--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ import Button from "../components/Button.astro";
   }
   .program {
     margin-top: 400px;
-    font-family: "Allerta Stencil", sans-serif;
+    font-family: "Saira Stencil One", serif;
   }
 
   .gallery a {
