--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,16 +11,26 @@ import Button from "../components/Button.astro";
   <section class="container">
     <h2 class="program">PROGRAM</h2>
     <div class="cards">
-      <Gradientcard header="LINEUP" text="Join us for an infusion of house, disco, and techno in the woods, featuring 44 artists from across the world." />
-      <Gradientcard header="TICKETS" text="Buy your ticket for Karrusel 2024. Buy now for blind bird tickets." price="800DKK" />
-      <Gradientcard header="MAP" text="The map for Karrusel is ready! Explore the map and find out where you'll be singing, dancing and having a blast!" />
+      <Gradientcard
+        header="LINEUP"
+        text="Join us for an infusion of house, disco, and techno in the woods, featuring 44 artists from across the world."
+      />
+      <Gradientcard
+        header="TICKETS"
+        text="Buy your ticket for Karrusel 2024. Buy now for blind bird tickets."
+        price="800DKK"
+      />
+      <Gradientcard
+        header="MAP"
+        text="The map for Karrusel is ready! Explore the map and find out where you'll be singing, dancing and having a blast!"
+      />
     </div>
     <h2>GALLERY</h2>
     <div class="gallery">
       <a href="/artists"> <img src="/img/rave1.webp" alt="rave1" /></a>
       <a href="/artists"> <img src="/img/rave2.webp" alt="rave1" /></a>
       <a href="/artists"> <img src="/img/rave3.webp" alt="rave1" /></a>
-      <a href="/artists"> <img src="/img/rave4.webp" alt="rave1" /></a>
+      <a href="/artists"> <img src="/img/rave6.webp" alt="rave1" /></a>
       <a href="/artists"> <img src="/img/rave5.webp" alt="rave1" /></a>
     </div>
 
