--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Button from "../components/Button.astro";
   }
   .program {
     margin-top: 400px;
-    font-family: "Saira Stencil One", serif;
+    font-family: "Allerta Stencil", sans-serif;
   }
 
   .gallery a {
@@ -82,6 +82,8 @@ import Button from "../components/Button.astro";
   h2 {
     margin-top: 10%;
     margin-left: 5%;
+    font-family: "Allerta Stencil", sans-serif;
+    font-size: 35px;
   }
 
   .buttons {
