--- a/src/pages/artists/index.astro
+++ b/src/pages/artists/index.astro
@@ -72,6 +72,7 @@ const artists = await fetch(url, options).then((res) => res.json());
     margin-top: 7%;
     margin-bottom: 7%;
     margin-left: 5%;
+    font-family: "Allerta Stencil", sans-serif;
   }
   #discover {
     font-size: 42px;
